app/styles/styles.css
/* ... */
@-moz-keyframes serbisyo-modal-content-scale-down {
    0% {
		-webkit-transform: scale(1);
		-ms-transform: scale(1);
		-o-transform: scale(1);
		transform: scale(1);
    } 100% {
		-webkit-transform: scale(0);
		-ms-transform: scale(0);
		-o-transform: scale(0);
		transform: scale(0);    }
}

@-0-keyframes serbisyo-modal-content-scale-down {
    0% {
		-webkit-transform: scale(1);
		-ms-transform: scale(1);
		-o-transform: scale(1);
		transform: scale(1);
    } 100% {
		-webkit-transform: scale(0);
		-ms-transform: scale(0);
		-o-transform: scale(0);
		transform: scale(0);
    }
}

@keyframes serbisyo-modal-content-scale-down {
    0% {
		-webkit-transform: scale(1);
		-ms-transform: scale(1);
		-o-transform: scale(1);
		transform: scale(1);
    } 100% {
		-webkit-transform: scale(0);
		-ms-transform: scale(0);
		-o-transform: scale(0);
		transform: scale(0);
    }
}

.dialog-shadow-1 {
	-webkit-box-shadow: 0 4px 23px 5px rgba(0, 0, 0, 0.2), 0 2px 6px rgba(0,0,0,0.15);
	-moz-box-shadow: 0 4px 23px 5px rgba(0, 0, 0, 0.2), 0 2px 6px rgba(0,0,0,0.15);
	box-shadow: 0 4px 23px 5px rgba(0, 0, 0, 0.2), 0 2px 6px rgba(0,0,0,0.15);
}

.dialog-shadow-2 {
	-webkit-box-shadow: 0 2px 40px 0 rgba(0,0,0,.4);
	-moz-box-shadow: 0 2px 40px 0 rgba(0,0,0,.4);
  	box-shadow: 0 2px 40px 0 rgba(0,0,0,.4);
}

/** navbar **/

.navbar-right.hidden-xs .dropdown-toggle {
	max-height: 64px;
	overflow: hidden;
}

.navbar-brand {
	padding: 15px;
}

.logo {
	max-height: 35px;
}

.nav-image {
	max-height: 25px;
	-webkit-border-radius: 2px;
	-moz-border-radius: 2px;
	border-radius: 2px;
	background: rgba(0,0,0,.1);
}

/** dropdown-menu **/

.dropdown-menu i {
	width: 10px;
}

/** header-search **/

.header-search {
	margin-bottom: 10px;
	padding-top: 20px;
}

.header-search div,
.header-search input.form-control {
	-webkit-transition: all .3s linear;
	-o-transition: all .3s linear;
	transition: all .3s linear;
}

.header-search .searchkey {
	background: #fff;
}

.header-search .location-input {
	background: #ebebeb;
	-webkit-border-radius: 3px;
	-moz-border-radius: 3px;
	border-radius: 3px;
	width: 100px;
	position: absolute;
	top: 2px;
	z-index: 99;
	right: 65px;
	padding: 0;
}

.header-search .location-input input.form-control {
	outline: 0;
	font-size: 10px;
	padding: 0;
	height: 25px;
}

.header-search .location-input input.form-control:not(:first-child):not(:last-child) {
	-webkit-border-radius: 0 0 2px;
	-moz-border-radius: 0 0 2px;
	border-radius: 0 0 2px;
}

.header-search .location-input .input-group-addon {
	height: 25px;
	padding: 0 5px;
	color: #444;
}

.popup-location-error {
	background: #e51c23;
	color: #fff;
	display: none;
	top: 25px;
	left: -10px;
	font-size: 12px;
	width: 200px;
	opacity: 0;
}

.popover.bottom.popup-location-error > .arrow:after {
	border-bottom-color: #e51c23;
}

.header-search ul.dropdown-menu {
	width: 214px;
	max-height: 300px;
	margin-left: -23px;
	overflow: auto;
}

/** go to top **/

.go-to-top {
	position: fixed;
	right: 5px;
	bottom: 5px;
	background: rgba(0,0,0,.8);
	padding-right: 10px;
	padding-left: 12px;
	padding-top: 0;
	padding-bottom: 2px;
	-webkit-border-radius: 3px;
	-moz-border-radius: 3px;
	border-radius: 3px;
	color: #E5E5E5;
	cursor: pointer;
	z-index: 1000;
	opacity: 0;
}

/** serbisyo-ads **/

.search-filters,
.search-results {
	float: left;
	position: relative;
}

.search-filters > .content-container {
	background: #FAFAFA;
	-webkit-transition: all .5s linear;
	-o-transition: all .5s linear;
	transition: all .5s linear;
}

.search-filters > .content-container > .form-group {
	margin-bottom: 5px;
}

.search-filters .radio {
	padding-left: 0;
	margin-top: -5px;
	margin-bottom: 0;
	cursor: pointer;
	-webkit-transition: all .1s linear;
	-o-transition: all .1s linear;
	transition: all .1s linear;
}

.search-filters .content-container:not(:first-child) .radio {
	-webkit-transition: all 0s linear;
	-o-transition: all 0s linear;
	transition: all 0s linear;
}

.search-filters .radio label {
	min-height: 23px;
	padding-left: 0;
}

.show-category label {
	font-weight: bold;
}

.show-category label:hover {
	color: #000;
}

@media (max-width: 992px) {
	.search-filters {
		/*height: 60px;*/
	}

	.search-filters .content-container {
		float: left;
		z-index: 700;
		cursor: pointer;
		height: 47px;
		-webkit-transition: all .2s linear;
		-o-transition: all .2s linear;
		transition: all .2s linear;
	}

	.search-filters .content-container:last-child {
		margin-left: 10px;
		z-index: 600;
	}

	.search-filters .content-container.content-1 {
		height: 190px;
	}

	.search-filters .content-container.content-2 {
		height: 615px;
	}
}

@media (max-width: 450px) {
	.search-filters {
		/*height: 120px;*/
		float: none;
	}

	.search-filters .content-container {
		float: none;
		position: absolute;
	}

	.search-filters .content-container:last-child {
		margin-left: 0;
		top: 55px;
	}

	.search-filters .content-container.content-1 {
		height: 190px;
	}

	.search-filters .content-container.content-2 {
		height: 615px;
	}
}

.sponsored-container {
	position: relative;
}

.sponsored {
	position: absolute;
	margin-top: -6px;
	right: -55px;
	background: rgba(0,0,0,.3);
	padding: 2px 40px;
	color: #fff;
	font-size: 10px;
	-webkit-transform: rotate(35deg);
	-ms-transform: rotate(35deg);
	-o-transform: rotate(35deg);
	transform: rotate(35deg);
}

.sponsored-body {
	background: #FAFAFA;
}

.serbisyo-ads {
	background: #fff;
	-webkit-border-radius: 3px;
	-moz-border-radius: 3px;
	border-radius: 3px;
}

.serbisyo-ads .panel-heading {
	background: #fff;
	border-top-right-radius: 3px;
  	border-top-left-radius: 3px;
}

.serbisyo-ads .panel-body {
	border-top: 1px solid #eeeeee;
}
/* ... */

